# SLR-parser

./: CMakeLists.txt  README.md
docs/: action_goto.csv
include/: AST.hpp  lexer.hpp  syntax_analyzer.hpp
src/: ast.cpp  lexer.cpp  lexer.ll  main.cpp  syntax_analyzer.cpp
tests/: parser_tests.cpp
